# axcl-sample

./: CMakeLists.txt  README.md  aarch64-none-linux-gnu.toolchain.cmake  build.sh  download_opencv.sh
include/: detection.hpp  io.hpp
source/: CMakeLists.txt  sample_axclrt_classification.cc  sample_axclrt_yolov5s.cc
